src/components/Setting/styles.scss
@import "../../assets/base.scss";
.setting{
  width: 100%;
  padding-top: 100px;
  text-align: center;
  position: relative;
  .githubStarRender {
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #9baec8;
    height: 26px;
    margin-left: 20px;
    position: absolute;
    right: 20px;
    top: 30px;
    cursor: pointer;
    .githubIcon {
      height: 30px;
      font-size: 28px;
      padding-right: 4px;
      padding-left: 4px;
    }
    .starTitle{
      font-size: 12px;
      height: 26px;
      padding-right: 4px;
      padding-left: 4px;
      line-height: 26px;
      color: #fff;
      background-color: #5893d4;
    }
  }
  .userInfo p {
    font-size: 12px;
    padding-top: 20px;
  }
  .name{
    font-size: 18px;
    padding-top: 20px;
  }
  .baseButton {
    position: relative;
    font-size: 12px;
    margin-top: 80px;
  }
  .contact, .contact a {
    color: $gray;
    text-decoration:none; 
    margin: 40px 0;
    font-size: 14px;
    cursor: pointer;
    display: block;
  }
  .version {
    position: absolute;
    bottom: 10px;
    right: 10px;
    color: $gray;
    font-size: 14px;
  }
}

